Tiny fix: Empty footer in FilesBrowser for avoiding contextual popups from getting clipped had been forsaken during a refactor long time ago

--- a/code/frontend/src/css/styles.css
+++ b/code/frontend/src/css/styles.css
@@ -540,12 +540,6 @@ body {
   margin-left: 10px;
 }
 
-.mainBody {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-}
-
 /**
  * Classes page 
  **/
@@ -1372,6 +1366,11 @@ body {
 /**
  * Admin page
  */
+
+.adminMainBody {
+  display: flex;
+  flex-direction: row;
+}
 
 .adminBodyColumn1 {
   width: 20%;
